<resources>
    <string name="app_name">Craftastic</string>
    <string name="my_api_key">AIzaSyDeNcTUqTAo7X2q3mUc9Emom78y12V14lo</string>
    <string name="c">C</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="find_your_needed_crafts">Find your needed crafts!</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="fullName_required">Full Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="phone_required">Phone Number is required</string>
    <string name="phone_lebanese">Please provide a lebanese cell number</string>
    <string name="password_length_error">Password must contain more than 5 characters</string>
    <string name="email_format_error">Invalid Email Format</string>
    <string name="email_exists_error">Email already used</string>
    <string name="account_settings">Account Settings</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="contact_email">Contact Email</string>
    <string name="upload_up_to_5_photos">UPLOAD UP TO 5 PHOTOS</string>
    <string name="upload_images">Upload images</string>
    <string name="tap_on_images_to_edit_them_or_press_hold_and_move_for_reordering">Tap on images to edit them, or press, hold and move for reordering.</string>
    <string name="post_craft">Post Craft</string>
    <string name="welcome_to_craftastic">Welcome to Craftastic</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="condition">Condition</string>
    <string name="used">Used</string>
    <string name="newCondition">New</string>
    <string name="description">Description</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="enter_address">Enter address manually</string>
    <string name="sell_item">Sell Item</string>
    <string name="options">Options</string>
    <string name="posted">Posted:</string>
    <string name="my_posts">My Posts</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="details">Details</string>
    <string name="seller_name">Seller Name:</string>
    <string name="email_">Email:</string>
    <string name="condition_">Condition:</string>
    <string name="location">Location</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_price">Enter Price</string>
    <string name="write_description_about_your_item">Write description about your item</string>
    <string name="type_your_address_here">Type your address here</string>
    <string name="favorites">Favorites</string>
    <string name="some_time_ago">Some time ago</string>
    <string name="craftastic">Craftastic</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_you_want_to_delete_this_item_this_action_cannot_be_undone">Are you sure you want to delete this item? This action cannot be undone.</string>
    <string name="delete">Delete</string>
</resources>