<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvDeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/confirm_deletion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/edit_text_grey" />

    <TextView
        android:id="@+id/tvDeleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_item_this_action_cannot_be_undone"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnDeleteCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/btnDeleteConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/delete"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

</LinearLayout>
